applications/service-envs/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: farming-deployment # "*******change for new module*******"
  namespace: prod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: farming  # "*******change for new module*******"
  template:
    metadata:
      labels:
        app: farming # "*******change for new module*******"
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: "kubernetes.io/hostname"
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app: farming # "*******change for new module*******"
      containers:
      - name: farming # "*******change for new module*******"
        image: _{_IMAGE_}_
        # image: lukhee/bg-agric-os:farming
        ports:
        - containerPort: 3000 # "*******change for new module*******"
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /api/farmers # "*******change for new module*******"
            port: 3000 # "*******change for new module*******"
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /api/farmers # "*******change for new module*******"
            port: 3000    # "*******change for new module*******"
          initialDelaySeconds: 3
          periodSeconds: 3
  strategy:
    type: RollingUpdate  # Default strategy, updates pods in a rolling manner
    rollingUpdate:
      maxSurge: 1  # Maximum number of pods that can be created beyond replicas during an update
      maxUnavailable: 1
