applications/service-envs/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service # "*******change for new module*******"
  namespace: prod
spec:
  selector:
    app: farming # "*******change for new module*******"
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000 # "*******change for new module*******"
