applications/service-envs/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress # "*******change for new module*******"
  namespace: prod
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    # cloud.google.com/neg: '{"exposed_ports": {"80":{}}}'
    # cloud.google.com/backend-config: '{"default": "example-backendconfig"}'
    # networking.gke.io/v1/global-ingress-allowed: "all"
    # networking.gke.io/v1/global-ingress-managed-security-policy: "projects/YOUR_PROJECT_ID/global/managedSecurityPolicies/waf-rules-policy"
    # nginx.ingress.kubernetes.io/ssl-redirect: "true" 

spec:
  ingressClassName: nginx
  rules:
    - host: _{_SUB_DOMAIN_}_.example.com # "*******change for new module*******"
      http:
        paths:
          - path: /api/_{_APP_PATH_}_ # "*******change for new module*******"
            pathType: Prefix
            backend:
              service:
                name: farming-service # "*******change for new module*******"
                port:
                  number: 80
  defaultBackend:
    service:
      name: default-backend
      port:
        number: 80
